fixed the footer in gallery using grid and flex and changed hover color on facts for visibility

--- a/styles/facts.css
+++ b/styles/facts.css
@@ -8,7 +8,7 @@ h2 {
 }
 
 .fun-facts :hover{
-    color:burlywood;
+    color: rgb(71, 71, 137);
 }
 
 nav :hover:not(.active){
