--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,23 +1,27 @@
+div {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 80% 20%;
+}
+
+
 
 section {
     margin: auto;
-    width: 80vw;
-    height: 80vh;
     display: flex;
-    /* grid-template-columns: 50% 50%;
-    grid-template-rows: 33.33% 33.33% 33.33%; */
     flex-wrap: wrap;
     justify-content: space-evenly;
     row-gap: 50px;
+    grid-row: 1 / 2;
+}
+
+footer {
+    grid-row: 2 / 3;
 }
 
 img {
-
     width: 40%;
-    height: 40%;
-    grid-column: 1 / 2;
-    grid-row: 1 / 1;
-    
+    height: 300px;
 }
 /* Wave 2 focus */
 img {
